[tool.poetry]
name = "flask-pytest-bdd"
version = "0.1.0"
description = ""
authors = ["Jerry YT Chen <jerry_yt_chen@trendmicro.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask-restx = "^0.2.0"
pytest-bdd = "^3.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
